# fdg

./: .devcontainer.json  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  basic-8d2fb5b8cc381d28.d  basic-8d2fb5b8cc381d28.wasm  basic.d  binary_tree.html  build-web-examples.sh  cylinder.html  flake.nix  img_binary_tree-3b8b6eff2db6829c.d  img_binary_tree-3b8b6eff2db6829c.wasm  img_binary_tree.d  img_cylinder-fb046f9491a470d7.d  img_cylinder.d  img_cylinder.wasm  img_fragmented-43d7e625f3467ff7.d  img_fragmented.d  img_fragmented.wasm  img_json-f2c44fa7214d4067.d  img_json-f2c44fa7214d4067.wasm  img_json.d  img_lattice-623372c0ce643daa.d  img_lattice-623372c0ce643daa.wasm  img_lattice.d  img_nd_cube-439ddd9eb623d04f.d  img_nd_cube.d  img_nd_cube.wasm  img_pyramid-7aa93825d515cc81.d  img_pyramid.d  img_pyramid.wasm  img_ring-da11c037ec34fda9.d  img_ring-da11c037ec34fda9.wasm  img_ring.d  img_social_network-1677dcf4103786c8.d  img_social_network.d  img_social_network.wasm  (+137 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 71p161z6bda6k0g45af048742q1qcqql-source  aiv01710wqn2b7hms2253d1cq89kdzh8-source  d758mi326d0ikcvwd9hi0xiycwy2v4ca-source  pgid9c9xfcrbqx2giry0an0bi0df7s5c-source
.github/workflows/: build_nix.yml  ci.yml  main.yml  tests.yml  web.yml
datasets/: basic.gml  cube.dot  cube.gml  cube.json  pyramid.gml  social_network.dot  social_network.gml  social_network.json
examples/: basic.rs  demo.rs  macroquad-basic.rs  macroquad-lattice.rs  macroquad-max-nodes.rs  macroquad-random.rs  macroquad-ring.rs  macroquad-square.rs  sim-basic.rs
fdg-2d/: Cargo.toml
fdg-2d-macroquad/: Cargo.toml
fdg-2d-macroquad/examples/: macroquad-basic.rs
fdg-2d-macroquad/src/: lib.rs
fdg-2d-wgpu/: Cargo.toml
fdg-3d/: Cargo.toml
fdg-img/: .gitignore  Cargo.toml  README.md  index.html
fdg-img/assets/: fdg-img_bg.1e2ba50e.wasm  fdg-img_bg.2058d3d3.wasm  fdg-img_bg.207564d4.wasm  fdg-img_bg.464839e8.wasm  fdg-img_bg.47c72e1c.wasm  fdg-img_bg.6fc86c89.wasm  fdg-img_bg.91795a2f.wasm  fdg-img_bg.9df2b18c.wasm  fdg-img_bg.dd029b1e.wasm  fdg-img_bg.f7437991.wasm  fdg-img_bg.fc39333d.wasm  fdg-img_bg.fc5437be.wasm  index.01e25b21.js  index.0cccd5c4.js  index.143f27f4.css  index.2420db62.js  index.3b0ccc4d.js  index.55fac8cd.js  index.5e70ad15.js  index.74a2766d.js  index.7b1e1c22.css  index.7b5efbb4.js  index.94803faf.js  index.a6dfce37.js  index.bc88a1a3.js  index.bedef215.js  index.e4e213c4.js
fdg-img/examples/: binary_tree.rs  binary_tree_img.rs  cylinder.rs  cylinder_img.rs  fragmented_img.rs  img_binary_tree.rs  img_fragmented.rs  img_pyramid.rs  img_ring.rs  img_social_network.rs  img_sphere.rs  img_weighted_binary_tree.rs  json.rs  json_img.rs  lattice.rs  lattice_img.rs  n_dimension_cube_img.rs  nd_cube.rs  pyramid_img.rs  ring_img.rs  social_network_img.rs  sphere_img.rs  weighted_binary_tree_img.rs
fdg-img/examples/web/: Makefile  index.html
fdg-img/pkg/: README.md  fdg-img.d.ts  fdg-img.js  fdg-img_bg.wasm  fdg-img_bg.wasm.d.ts  package.json
fdg-img/src/: lib.rs  wasm.rs
fdg-img/web/: Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
fdg-img/web/src/: App.vue  index.css
fdg-img/web/src/components/: Title.vue  ViewSwitcher.vue
fdg-macroquad/: Cargo.toml  README.md
fdg-macroquad/examples/: 4d_cube.rs  binary_tree.rs  cylinder.rs  empty.rs  fragmented.rs  json.rs  lattice.rs  macroquad-random.rs  macroquad-ring.rs  max-nodes.rs  mesh.rs  nd_cube.rs  pyramid.rs  random.rs  resize.rs  ring.rs  shape.rs  shapes.rs  simple.rs  sphere.rs  square.rs  translate.rs  view_binary_tree.rs  view_cylinder.rs  view_json.rs  view_nd_cube.rs  view_pyramid.rs  view_ring.rs  view_social_network.rs  view_sphere.rs
fdg-macroquad/examples/datasets/: cube.json  les_miserables.json  pyramid.json
fdg-macroquad/examples/web-examples/: .gitignore  Makefile  binary_tree.html  empty.html  index.html  json.html  lattice.html  social_network.html  sphere.html
fdg-macroquad/src/: lib.rs
fdg-sim/: Cargo.toml  README.md  perf.data
fdg-sim/examples/: basic.rs  conversion.rs  dot.rs  gml.rs  json.rs  sim-basic.rs  speed.rs  speed_comparison.rs
fdg-sim/src/: cpu.rs  dot.rs  force.rs  gml.rs  graph.rs  json.rs  lib.rs  node.rs  simulation.rs
fdg-sim/src/force/: force_atlas_2.rs  fruchterman_reingold.rs  fruchterman_reingold_gpu.rs  handy.rs  mod.rs  resize.rs  scale.rs  translate.rs  weighted_fruchterman_reingold.rs
fdg-sim/src/gpu/: mod.rs
fdg-sim/tests/: conversions.rs
fdg-wasm/: .gitignore  Cargo.toml  Makefile  README.md
fdg-wasm/src/: lib.rs
fdg-wasm/src/subtypes/: edge.rs  node.rs
fdg-web/: Cargo.toml  Makefile
fdg-web/examples/: basic.html
fdg-web/src/: lib.rs
fdg-web/src/subtypes/: edge.rs  mod.rs  node.rs
pkg/: README.md  fdg-wasm.d.ts  fdg-wasm.js  fdg-wasm_bg.wasm  fdg-wasm_bg.wasm.d.ts  fdg-web.d.ts  fdg-web.js  fdg-web_bg.wasm  fdg-web_bg.wasm.d.ts  package.json
src/: forces.rs  input.rs  lib.rs  main.rs  render.rs  shader.wgsl
src/forces/: fr.rs  fruchterman_reingold.rs  mod.rs  simple.rs
src/macroquad/: mod.rs
src/sim/: mod.rs  node.rs  simulation.rs
wasmapi/: basic.html  basic.js  deno.js  jsongraph2dot.js
wasmapi/pkg/: LICENSE  README.md  fdg-wasm.d.ts  fdg-wasm.js  fdg-wasm_bg.wasm  fdg-wasm_bg.wasm.d.ts  package.json
web-examples/: 4d_cube.html  cylinder.html  empty.html  index.html  json.html  ring.html  sphere.html
