[package]
name = "fdg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# simulation
glam = "0.20"
palette = "0.6.0"

log = "0.4"
rand = "0.8"

petgraph = "0.6"

# macroquad visualizer
macroquad = "0.3"
egui-macroquad = "0.9.0"
egui = "0.17.0"

# wgpu visualizer
# winit = "0.26.1"
# wgpu = "0.12.0"

[dev-dependencies]
pretty_env_logger = "0.4"
