[package]
name = "fdg"
version = "1.0.0"
edition = "2021"
authors = [ "Grant Handy <granthandy@proton.me>" ]
license = "MIT"
description = "A flexible force-directed graph drawing library"
repository = "https://github.com/grantshandy/fdg/"
documentation = "https://docs.rs/fdg/"
keywords = [ "graph", "force", "directed", "viz" ]
categories = [ "visualization" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
petgraph = { version = "0.7", features = ["stable_graph"], default-features = false }
num-traits = "0.2.17"
rand = "0.8.5"
rustc-hash = "1.1.0"
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
macroquad = "0.4.4"
petgraph-gen = "0.2"

[features]
rayon = ["dep:rayon"]
serde = ["petgraph/serde", "nalgebra/serde-serialize"]
default = ["rayon"]
