[package]
name = "fdg-img"
version = "0.4.0"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
license = "GPL-3.0"
description = "A simple SVG renderer for fdg"
repository = "https://github.com/grantshandy/fdg/tree/main/fdg-img"
documentation = "https://docs.rs/fdg-img/"
keywords = ["graph", "force", "svg", "renderer"]
categories = ["visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
fdg-sim = "0.8"
# fdg-sim = { path = "../fdg-sim/" }

[dev-dependencies]
fdg-sim = { version = "0.8", features = ["json"] }
# fdg-sim = { path = "../fdg-sim/", features = ["json"] }
