[package]
name = "fdg-macroquad"
version = "0.3.4"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
license = "GPL-3.0"
description = "The macroquad based visualizer for fdg"
repository = "https://github.com/grantshandy/fdg/tree/main/fdg-macroquad/"
documentation = "https://docs.rs/fdg-macroquad"
keywords = ["graph", "force", "macroquad"]
categories = ["visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.11"
fdg-sim = { version = "0.7", features = ["json"] }
# fdg-sim = { path = "../fdg-sim/" }
macroquad = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
