[package]
name = "fdg-sim"
version = "0.1.0"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>", "Aditya Suresh <ethanaditya@gmail.com>"]
license = "GPL-3.0"
description = "A flexible force directed graph simulation"
repository = "https://github.com/skylinecc/fdg/"
documentation = "https://docs.rs/fdg_sim/"
keywords = ["graph", "fruchterman", "reingold", "force", "directed"]
categories = ["visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20"
petgraph = "0.6"
quad-rand = "0.2"
dyn-clonable = "0.9"
regex = "1.5"
serde_json = { version = "1", optional = true }
wgpu = "0.12"
pollster = "0.2.5"

[dev-dependencies]
chrono = "0.4"

[features]
json = ["serde_json"]
