[package]
name = "fdg-sim"
version = "0.3.1"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
license = "GPL-3.0"
description = "A flexible force directed graph simulation"
repository = "https://github.com/skylinecc/fdg/"
documentation = "https://docs.rs/fdg_sim/"
keywords = ["graph", "fruchterman", "reingold", "force", "directed"]
categories = ["visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20"
petgraph = "0.6"
quad-rand = "0.2"
dyn-clonable = "0.9"
regex = "1.5"
serde = { version = "1.0", optional = true }
serde_json = { version = "1", optional = true }
pollster = "0.2.5"
anyhow = { version = "1", optional = true }

[dev-dependencies]
chrono = "0.4"

[features]
json = ["serde/derive", "glam/serde", "petgraph/serde-1", "serde_json", "anyhow"]

[[example]]
name = "json-parity"
required-features = ["json"]