[package]
name = "fdg-sim"
version = "0.7.1"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
license = "MIT"
description = "A flexible force-directed graph framework"
repository = "https://github.com/grantshandy/fdg/tree/main/fdg-sim"
documentation = "https://docs.rs/fdg_sim/"
keywords = ["graph", "force", "directed", "viz"]
categories = ["visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21"
petgraph = "0.6"
quad-rand = "0.2"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1.5", optional = true }
hashlink = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
json = ["serde/derive", "glam/serde", "petgraph/serde-1", "serde_json"]
gml = ["regex"]

[[example]]
name = "gml"
required-features = ["gml","json"]

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "dot"
required-features = ["json"]
