[package]
name = "fdg-wasm"
version = "0.1.2"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
license = "MIT"
description = "A flexible force directed graph framework"
repository = "https://github.com/grantshandy/fdg/"
documentation = "https://docs.rs/fdg_sim/"
keywords = ["graph", "force", "directed", "viz"]
categories = ["visualization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
fdg-sim = { version = "0.7", features = ["json"] }
# fdg-sim = { path = "../fdg-sim/", features = ["json"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }